Added detailed explaination of solution and mathematical expressions

--- a/Automatic_Hand_Tracking_03.ipynb
+++ b/Automatic_Hand_Tracking_03.ipynb
@@ -4,8 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The automatic hand tracking pipeline consists of two main parts: hand detection and hand tracking. Here's a theoretical explanation of the solution:\n",
-        "\n",
+        "# Hand Tracking Pipeline: \n",
         "## 1. Hand Detection\n",
         "\n",
         "The first step is to detect hands in the initial frame of the video. This is done using Google MediaPipe's Hand Landmarker model, which is based on machine learning techniques.\n",
@@ -16,33 +15,25 @@
         "\n",
         "For each detected hand, we get:\n",
         "\n",
-        "$$\n",
-        "L = \\{(x_i, y_i, z_i) | i = 1, ..., 21\\}\n",
-        "$$\n",
+        "$L = \\{(x_i, y_i, z_i) | i = 1, ..., 21\\}$\n",
         "\n",
-        "where $$(x_i, y_i, z_i)$$ are the normalized coordinates of the i-th landmark.\n",
+        "where $(x_i, y_i, z_i)$ are the normalized coordinates of the i-th landmark.\n",
         "\n",
         "### Bounding Box Calculation\n",
         "\n",
         "From these landmarks, we calculate a bounding box around the hand:\n",
         "\n",
-        "$$\n",
-        "x_{min} = \\min_{i} x_i, \\quad x_{max} = \\max_{i} x_i\n",
-        "$$\n",
-        "$$\n",
-        "y_{min} = \\min_{i} y_i, \\quad y_{max} = \\max_{i} y_i\n",
-        "$$\n",
+        "$x_{min} = \\min_{i} x_i, \\quad x_{max} = \\max_{i} x_i$\n",
+        "\n",
+        "$y_{min} = \\min_{i} y_i, \\quad y_{max} = \\max_{i} y_i$\n",
         "\n",
         "The bounding box is then converted to pixel coordinates:\n",
         "\n",
-        "$$\n",
-        "x_{min}^{px} = x_{min} \\cdot w, \\quad x_{max}^{px} = x_{max} \\cdot w\n",
-        "$$\n",
-        "$$\n",
-        "y_{min}^{px} = y_{min} \\cdot h, \\quad y_{max}^{px} = y_{max} \\cdot h\n",
-        "$$\n",
+        "$x_{min}^{px} = x_{min} \\cdot w, \\quad x_{max}^{px} = x_{max} \\cdot w$\n",
         "\n",
-        "where $$w$$ and $$h$$ are the width and height of the image.\n",
+        "$y_{min}^{px} = y_{min} \\cdot h, \\quad y_{max}^{px} = y_{max} \\cdot h$\n",
+        "\n",
+        "where $w$ and $h$ are the width and height of the image.\n",
         "\n",
         "## 2. Hand Tracking\n",
         "\n",
@@ -54,15 +45,13 @@
         "\n",
         "### Mask Generation\n",
         "\n",
-        "For each frame $$t$$, we provide SAM 2 with:\n",
-        "1. The current frame image $$I_t$$\n",
-        "2. The bounding box(es) $$B_t = \\{(x_{min}, y_{min}, x_{max}, y_{max})_i\\}$$ from the previous frame\n",
+        "For each frame $t$, we provide SAM 2 with:\n",
+        "1. The current frame image $I_t$\n",
+        "2. The bounding box(es) $B_t = \\{(x_{min}, y_{min}, x_{max}, y_{max})_i\\}$ from the previous frame\n",
         "\n",
-        "SAM 2 then generates a mask $$M_t$$ for each hand:\n",
+        "SAM 2 then generates a mask $M_t$ for each hand:\n",
         "\n",
-        "$$\n",
-        "M_t = SAM2(I_t, B_t)\n",
-        "$$\n",
+        "$M_t = SAM2(I_t, B_t)$\n",
         "\n",
         "### Temporal Consistency\n",
         "\n",
@@ -72,29 +61,18 @@
         "\n",
         "The overall pipeline can be formulated as follows:\n",
         "\n",
-        "1. For the first frame $$t=0$$:\n",
-        "   $$\n",
-        "   L_0 = HandLandmarker(I_0)\n",
-        "   $$\n",
-        "   $$\n",
-        "   B_0 = BoundingBox(L_0)\n",
-        "   $$\n",
-        "   $$\n",
-        "   M_0 = SAM2(I_0, B_0)\n",
-        "   $$\n",
+        "1. For the first frame $t=0$:\n",
+        "   $L_0 = HandLandmarker(I_0)$\n",
+        "   $B_0 = BoundingBox(L_0)$\n",
+        "   $M_0 = SAM2(I_0, B_0)$\n",
         "\n",
-        "2. For subsequent frames $$t > 0$$:\n",
-        "   $$\n",
-        "   M_t = SAM2(I_t, B_{t-1})\n",
-        "   $$\n",
-        "   $$\n",
-        "   B_t = BoundingBox(M_t)\n",
-        "   $$\n",
+        "2. For subsequent frames $t > 0$:\n",
+        "   $M_t = SAM2(I_t, B_{t-1})$\n",
+        "   $B_t = BoundingBox(M_t)$\n",
         "\n",
         "This process is repeated for each frame in the video, resulting in a sequence of masks that track the hands throughout the video.\n",
         "\n",
-        "The final output is a video where the hand regions are masked in each frame, effectively tracking the hand movements over time.\n",
-        "\n"
+        "The final output is a video where the hand regions are masked in each frame, effectively tracking the hand movements over time."
       ]
     },
     {
